--- a/style/style.css
+++ b/style/style.css
@@ -174,12 +174,16 @@ body {
 /*---- main body----*/
 #main_container {
   margin: 1px;
-  margin-top: 2px;
+  margin-top: 30px;
   width: 100%;
   height: calc(100% - 150px); /* Adjust for fixed header */
   overflow: hidden; /* Prevent scrolling */
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 2px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid red;
+
+}
+#testing_language{
+  border: 1px solid red;
+  display: block
 }
